<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/lyt_margin">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <com.calibrage.payzanconsumer.framework.util.NCBTextInputLayout
                android:id="@+id/firstNameTIl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.calibrage.payzanconsumer.framework.controls.CommonEditText
                    android:id="@+id/firstNameEdt"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edt_height"
                    android:hint="@string/first_name"
                    android:inputType="textPersonName"
                    android:imeOptions="actionNext"/>

            </com.calibrage.payzanconsumer.framework.util.NCBTextInputLayout>

            <com.calibrage.payzanconsumer.framework.util.NCBTextInputLayout
                android:id="@+id/middleNameTIL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.calibrage.payzanconsumer.framework.controls.CommonEditText
                    android:id="@+id/middleNameEdt"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edt_height"
                    android:hint="@string/middle_name"
                    android:inputType="textPersonName"
                    android:imeOptions="actionNext"/>

            </com.calibrage.payzanconsumer.framework.util.NCBTextInputLayout>

            <com.calibrage.payzanconsumer.framework.util.NCBTextInputLayout
                android:id="@+id/lastNameTIL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.calibrage.payzanconsumer.framework.controls.CommonEditText
                    android:id="@+id/lastNameEdt"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edt_height"
                    android:hint="@string/last_name"
                    android:inputType="textPersonName"
                    android:imeOptions="actionNext"/>

            </com.calibrage.payzanconsumer.framework.util.NCBTextInputLayout>

            <com.calibrage.payzanconsumer.framework.util.NCBTextInputLayout
                android:id="@+id/mobileTIL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.calibrage.payzanconsumer.framework.controls.CommonEditText
                    android:id="@+id/mobileEdt"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edt_height"
                    android:hint="@string/mobile_no"
                    android:inputType="phone"
                    android:imeOptions="actionNext"/>

            </com.calibrage.payzanconsumer.framework.util.NCBTextInputLayout>

            <com.calibrage.payzanconsumer.framework.util.NCBTextInputLayout
                android:id="@+id/emailTIL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.calibrage.payzanconsumer.framework.controls.CommonEditText
                    android:id="@+id/emailEdt"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edt_height"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:imeOptions="actionNext"/>

            </com.calibrage.payzanconsumer.framework.util.NCBTextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_province"/>

            <com.calibrage.payzanconsumer.framework.util.NCBTextInputLayout
                android:id="@+id/stateTIl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible">

                <Spinner
                    android:layout_marginTop="@dimen/txt_margin"
                    android:id="@+id/stateSpn"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edt_height"
                    android:hint="@string/select_province"
                    android:imeOptions="actionNext"/>

            </com.calibrage.payzanconsumer.framework.util.NCBTextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_district"/>

            <com.calibrage.payzanconsumer.framework.util.NCBTextInputLayout
                android:id="@+id/districtTIl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Spinner
                    android:layout_marginTop="@dimen/txt_margin"
                    android:id="@+id/districtSpn"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edt_height"
                    android:hint="@string/select_district"
                    android:imeOptions="actionNext"/>

            </com.calibrage.payzanconsumer.framework.util.NCBTextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_mandal"/>

            <com.calibrage.payzanconsumer.framework.util.NCBTextInputLayout
                android:id="@+id/mandalTIl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Spinner
                    android:layout_marginTop="@dimen/txt_margin"
                    android:id="@+id/mandalSpn"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edt_height"
                    android:hint="@string/select_mandal"
                    android:imeOptions="actionNext"/>

            </com.calibrage.payzanconsumer.framework.util.NCBTextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_village"/>

            <com.calibrage.payzanconsumer.framework.util.NCBTextInputLayout
                android:id="@+id/villageTIl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Spinner
                    android:layout_marginTop="@dimen/txt_margin"
                    android:id="@+id/villageSpn"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edt_height"
                    android:hint="@string/select_village"
                    android:imeOptions="actionNext"/>

            </com.calibrage.payzanconsumer.framework.util.NCBTextInputLayout>


            <com.calibrage.payzanconsumer.framework.util.NCBTextInputLayout
                android:id="@+id/address1TIL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.calibrage.payzanconsumer.framework.controls.CommonEditText
                    android:id="@+id/address1Edt"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edt_height"
                    android:hint="@string/address1"
                    android:inputType="textMultiLine"
                    android:imeOptions="actionNext"/>

            </com.calibrage.payzanconsumer.framework.util.NCBTextInputLayout>

            <com.calibrage.payzanconsumer.framework.util.NCBTextInputLayout
                android:id="@+id/address2TIL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.calibrage.payzanconsumer.framework.controls.CommonEditText
                    android:id="@+id/address2Edt"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edt_height"
                    android:hint="@string/address2"
                    android:inputType="textMultiLine"
                    android:imeOptions="actionNext"/>

            </com.calibrage.payzanconsumer.framework.util.NCBTextInputLayout>

            <com.calibrage.payzanconsumer.framework.util.NCBTextInputLayout
                android:id="@+id/landmarkTIL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.calibrage.payzanconsumer.framework.controls.CommonEditText
                    android:id="@+id/landmarkEdt"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edt_height"
                    android:hint="@string/landmark"
                    android:inputType="text"
                    android:imeOptions="actionNext"/>
            </com.calibrage.payzanconsumer.framework.util.NCBTextInputLayout>

            <com.calibrage.payzanconsumer.framework.util.NCBTextInputLayout
                android:id="@+id/commentTIL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.calibrage.payzanconsumer.framework.controls.CommonEditText
                    android:id="@+id/commentsEdt"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edt_height"
                    android:hint="@string/enter_your_comments"
                    android:inputType="text"
                    android:imeOptions="actionSend"/>
            </com.calibrage.payzanconsumer.framework.util.NCBTextInputLayout>


            <com.calibrage.payzanconsumer.framework.controls.CommonButton
                android:id="@+id/submit"
                style="@style/ButtonStyle"
                android:layout_marginBottom="@dimen/btn_margin_bottom"
                android:layout_marginTop="@dimen/btn_margin_top"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:imeOptions="actionSend"/>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>